--- a/csharp.utils/csharp.utils.csproj
+++ b/csharp.utils/csharp.utils.csproj
@@ -47,7 +47,9 @@
     <Reference Include="System.Xml"/>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BubbleSort.cs" />
+	<Compile Include="CSV.cs" />
+	<Compile Include="HelloWorld.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
